Switched background color

--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,6 @@
 
 .rhap_container {
   width: 100%;
-  background-color: #1a1919 !important;
+  background-color: #28252b !important;
   box-shadow: none !important;
 }
